# FAAPI

./: README.md  pyproject.toml
faapi/: __init__.py  abc.py  base.py  comment.py  connection.py  furaffinity.py  journal.py  parse.py  submission.py  user.py
faapi/furaffinity/: furaffinity.py  furaffinity_faapi.py  furaffinity_parser.py  parse.py
faapi/inkbunny/: inkbunny_faapi.py  inkbunny_parser.py
faapi/interface/: faapi_abc.py  parser_abc.py
faapi/sofurry/: sofurry_faapi.py  sofurry_parser.py
faapi/weasyl/: weasyl_faapi.py  weasyl_parser.py
localrepo_api/: __init__.py  base.py  comment.py  journal.py  parse.py  submission.py  user.py
localrepo_api/furaffinity/: furaffinity_faapi.py  furaffinity_parser.py
localrepo_api/inkbunny/: inkbunny_faapi.py  inkbunny_parser.py
localrepo_api/interface/: faapi_abc.py
localrepo_api/sofurry/: sofurry_faapi.py  sofurry_parser.py
localrepo_api/weasyl/: weasyl_faapi.py  weasyl_parser.py
tests/: test_connection.py  test_faapi.py  test_parse.py
