[tool.poetry]
name = "localrepo-api"
version = "3.10.0"
description = "Python module to implement API-like functionality for art gallery websites. A fork of FAAPI."
authors = ["The Solipsis Project <the.solipsis.project@gmail.com>", "Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/solipsis-project/localrepo-api"
repository = "https://github.com/solipsis-project/localrepo-api"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/solipsis-project/localrepo-api/blob/main/CHANGELOG.md"
"Source" = "https://github.com/solipsis-project/localrepo-api"
"Bug Reports" = "https://github.com/solipsis-project/localrepo-api/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
cfscrape = "^2.1.1"
lxml = "^4.9.1"
python-dateutil = "^2.8.2"
htmlmin = "^0.1.12"
bbcode = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
types-beautifulsoup4 = "^4.11.6"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
